# mansion-lighting

./: Cargo.toml  memory.x
.cargo/: config.toml
client/: pubspec.yaml
client/android/app/src/main/: AndroidManifest.xml
client/lib/: main.dart
firmware/: README.md
server/: Cargo.toml  build.rs
server/src/: blue.rs  color.rs  lighting.rs  main.rs
server/src/lighting/: mod.rs  twinkle.rs
src/: blue.rs  color.rs  led.rs  lib.rs  lighting.rs  main.rs  panic.rs
