[package]
name = "emb-test"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
dht-sensor = "0.2.1"
dht11 = "0.3.1"
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers", "task-arena-size-32768"] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.2.0", features = ["time-driver", "critical-section-impl"] }
embassy-time = "0.3.2"
embassy-usb-logger = "0.2.0"
embedded-hal = "1.0.0"
fastrand = { version = "2.1.1", default-features = false }
log = "0.4.22"
panic-probe = "0.3.2"
rand_core = "0.6.4"
ssd1306 = "0.9.0"
