[package]
name = "emb-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bt-hci = "0.1.1"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
critical-section = "1.2.0"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
dht-sensor = "0.2.1"
dht11 = "0.3.1"
embedded-hal = "1.0.0"
fastrand = { version = "2.1.1", default-features = false }
fixed = "1.28.0"
fixed-macro = "1.2.0"
log = "0.4.22"
panic-probe = "0.3.2"
pio = "0.2.1"
pio-proc = "0.2.2"
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
rand_core = "0.6.4"
ssd1306 = "0.9.0"
static_cell = "2.1.0"
trouble-host = { version = "0.1.0", features = ["gatt"] }

cyw43 = { version = "0.2.0", features = ["bluetooth"] }
cyw43-pio = "0.2.0"
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers", "task-arena-size-32768"] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.2.0", features = ["time-driver", "critical-section-impl", "rp2040"] }
embassy-time = "0.3.2"
embassy-sync = "0.6.0"

[patch.crates-io]
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "4b8c0f499b34e46ca23a56e2d1640ede371722cf" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
