[package]
name = "mansion-lighting"
version = "0.1.0"
edition = "2021"

[dependencies]
bt-hci = "0.1.1"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
critical-section = "1.2.0"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
dht-sensor = "0.2.1"
dht11 = "0.3.1"
embedded-hal = "1.0.0"
fastrand = { version = "2.1.1", default-features = false }
fixed = "1.28.0"
fixed-macro = "1.2.0"
log = "0.4.22"
panic-probe = "0.3.2"
pio = "0.2.1"
pio-proc = "0.2.2"
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
rand_core = "0.6.4"
ssd1306 = "0.9.0"
static_cell = "2.1.0"
trouble-host = { version = "0.1.0", features = ["gatt", "log"] }

cyw43 = { version = "0.2.0", features = ["bluetooth", "log"] }
cyw43-pio = "0.2.0"
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers", "task-arena-size-32768"] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.2.0", features = ["time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.3.2", features = [] }
embassy-sync = "0.6.0"
embassy-usb-logger = "0.2.0"
enum_dispatch = "0.3.13"
noise-functions = { version = "0.2.1", default-features = false, features = ["libm"] }
half = { version = "2.4.1", default-features = false }

[patch.crates-io]
trouble-host = { git = "https://github.com/micycle8778/trouble", rev = "865d4ef5562510a593f868aea59a5b0d572589b0" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }

[[bin]]
name = "mansion_lighting"
path = "src/main.rs"
test = false
doctest = false
bench = false

[lib]
name = "mansion_lighting"
path = "src/lib.rs"
test = false
doctest = false
bench = false

